// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`desktop (наше решение) выделяет ссылки на drive2 должен распарсить "shdfakj hadjkshfshaf h Бортжурнал на Drive2.ru — https://www.drive2.ru/r/selfmade/4035225266124009669/" 1`] = `
<div
  className="CardDescriptionHTML"
>
  <span>
    shdfakj hadjkshfshaf h Бортжурнал на 
    Drive2.ru
     — 
    <a
      className="Link"
      href="https://www.drive2.ru/r/selfmade/4035225266124009669/"
      target="_blank"
    >
      https://www.drive2.ru/r/selfmade/4035225266124009669/
    </a>
  </span>
</div>
`;

exports[`desktop (наше решение) выделяет ссылки на drive2 должен распарсить "www.drive2.ru/r/selfmade/4035225266124009669/ привет" 1`] = `
<div
  className="CardDescriptionHTML"
>
  <span>
    <a
      className="Link"
      href="https://www.drive2.ru/r/selfmade/4035225266124009669/"
      target="_blank"
    >
      www.drive2.ru/r/selfmade/4035225266124009669/
    </a>
     привет
  </span>
</div>
`;

exports[`desktop (наше решение) выделяет ссылки на drive2 должен распарсить "Еще много мелочей о которых писать не буду, все расскажу по телефону или при осмотре. Бортжурнал на Drive2.ru —https://www.drive2.ru/r/mitsubishi/1627761/. Причина продажи — покупка автомобиля поменьше. Для постановки на учет отдам оригинальные фары, без дефектов." 1`] = `
<div
  className="CardDescriptionHTML"
>
  <span>
    Еще много мелочей о которых писать не буду, все расскажу по телефону или при осмотре. Бортжурнал на 
    Drive2.ru
     —
    <a
      className="Link"
      href="https://www.drive2.ru/r/mitsubishi/1627761/"
      target="_blank"
    >
      https://www.drive2.ru/r/mitsubishi/1627761/
    </a>
    . Причина продажи — покупка автомобиля поменьше. Для постановки на учет отдам оригинальные фары, без дефектов.
  </span>
</div>
`;

exports[`desktop (наше решение) выделяет ссылки на drive2 должен распарсить "привет https://www.drive2.ru/r/selfmade/4035225266124009669/,
тексты" 1`] = `
<div
  className="CardDescriptionHTML"
>
  <span>
    привет 
    <a
      className="Link"
      href="https://www.drive2.ru/r/selfmade/4035225266124009669/"
      target="_blank"
    >
      https://www.drive2.ru/r/selfmade/4035225266124009669/
    </a>
    ,
    <br />
    тексты
  </span>
</div>
`;

exports[`desktop (наше решение) выделяет ссылки на drive2 должен распарсить "тест (https://drive2.ru/r/selfmade/4035225266124009669/) привет" 1`] = `
<div
  className="CardDescriptionHTML"
>
  <span>
    тест (
    <a
      className="Link"
      href="https://drive2.ru/r/selfmade/4035225266124009669/"
      target="_blank"
    >
      https://drive2.ru/r/selfmade/4035225266124009669/
    </a>
    ) привет
  </span>
</div>
`;

exports[`desktop (наше решение) выделяет ссылки на drive2 должен распарсить "тест drive2.ru/r/selfmade/4035225266124009669/ привет" 1`] = `
<div
  className="CardDescriptionHTML"
>
  <span>
    тест 
    <a
      className="Link"
      href="https://drive2.ru/r/selfmade/4035225266124009669/"
      target="_blank"
    >
      drive2.ru/r/selfmade/4035225266124009669/
    </a>
     привет
  </span>
</div>
`;

exports[`desktop (наше решение) выделяет ссылки на mirrent.ru должен распарсить "руководитель компании по аренде спортивных и эксклюзивных автомобилей mirrent.ru, выкупил болид" 1`] = `
<div
  className="CardDescriptionHTML"
>
  <span>
    руководитель компании по аренде спортивных и эксклюзивных автомобилей 
    <a
      className="Link"
      href="https://mirrent.ru"
      target="_blank"
    >
      mirrent.ru
    </a>
    , выкупил болид
  </span>
</div>
`;

exports[`desktop (наше решение) не выделяет ссылки на somelink.com должен распарсить "ссылку somelink.com не надо делать ссылкой в описании" 1`] = `
<div
  className="CardDescriptionHTML"
>
  <span>
    ссылку 
    somelink.com
     не надо делать ссылкой в описании
  </span>
</div>
`;

exports[`desktop (наше решение) правильно переносит строки 1`] = `
<div
  className="CardDescriptionHTML"
>
  <span>
    test
    <br />
    test
    <br />
  </span>
</div>
`;

exports[`mobile (linkifyjs) выделяет ссылки на drive2 должен распарсить "shdfakj hadjkshfshaf h Бортжурнал на Drive2.ru — https://www.drive2.ru/r/selfmade/4035225266124009669/" 1`] = `
<span>
  shdfakj hadjkshfshaf h Бортжурнал на 
  Drive2.ru
   — 
  <a
    className="Link"
    href="https://www.drive2.ru/r/selfmade/4035225266124009669/"
    target="_blank"
  >
    https://www.drive2.ru/r/selfmade/4035225266124009669/
  </a>
</span>
`;

exports[`mobile (linkifyjs) выделяет ссылки на drive2 должен распарсить "www.drive2.ru/r/selfmade/4035225266124009669/ привет" 1`] = `
<span>
  <a
    className="Link"
    href="https://www.drive2.ru/r/selfmade/4035225266124009669/"
    target="_blank"
  >
    www.drive2.ru/r/selfmade/4035225266124009669/
  </a>
   привет
</span>
`;

exports[`mobile (linkifyjs) выделяет ссылки на drive2 должен распарсить "Еще много мелочей о которых писать не буду, все расскажу по телефону или при осмотре. Бортжурнал на Drive2.ru —https://www.drive2.ru/r/mitsubishi/1627761/. Причина продажи — покупка автомобиля поменьше. Для постановки на учет отдам оригинальные фары, без дефектов." 1`] = `
<span>
  Еще много мелочей о которых писать не буду, все расскажу по телефону или при осмотре. Бортжурнал на 
  Drive2.ru
   —
  <a
    className="Link"
    href="https://www.drive2.ru/r/mitsubishi/1627761/"
    target="_blank"
  >
    https://www.drive2.ru/r/mitsubishi/1627761/
  </a>
  . Причина продажи — покупка автомобиля поменьше. Для постановки на учет отдам оригинальные фары, без дефектов.
</span>
`;

exports[`mobile (linkifyjs) выделяет ссылки на drive2 должен распарсить "привет https://www.drive2.ru/r/selfmade/4035225266124009669/,
тексты" 1`] = `
<span>
  привет 
  <a
    className="Link"
    href="https://www.drive2.ru/r/selfmade/4035225266124009669/"
    target="_blank"
  >
    https://www.drive2.ru/r/selfmade/4035225266124009669/
  </a>
  ,
  <br />
  тексты
</span>
`;

exports[`mobile (linkifyjs) выделяет ссылки на drive2 должен распарсить "тест (https://drive2.ru/r/selfmade/4035225266124009669/) привет" 1`] = `
<span>
  тест (
  <a
    className="Link"
    href="https://drive2.ru/r/selfmade/4035225266124009669/"
    target="_blank"
  >
    https://drive2.ru/r/selfmade/4035225266124009669/
  </a>
  ) привет
</span>
`;

exports[`mobile (linkifyjs) выделяет ссылки на drive2 должен распарсить "тест drive2.ru/r/selfmade/4035225266124009669/ привет" 1`] = `
<span>
  тест 
  <a
    className="Link"
    href="https://drive2.ru/r/selfmade/4035225266124009669/"
    target="_blank"
  >
    drive2.ru/r/selfmade/4035225266124009669/
  </a>
   привет
</span>
`;

exports[`mobile (linkifyjs) выделяет ссылки на mirrent.ru должен распарсить "руководитель компании по аренде спортивных и эксклюзивных автомобилей mirrent.ru, выкупил болид" 1`] = `
<span>
  руководитель компании по аренде спортивных и эксклюзивных автомобилей 
  <a
    className="Link"
    href="https://mirrent.ru"
    target="_blank"
  >
    mirrent.ru
  </a>
  , выкупил болид
</span>
`;

exports[`mobile (linkifyjs) не выделяет ссылки на somelink.com должен распарсить "ссылку somelink.com не надо делать ссылкой в описании" 1`] = `
<span>
  ссылку 
  somelink.com
   не надо делать ссылкой в описании
</span>
`;

exports[`mobile (linkifyjs) правильно переносит строки 1`] = `
<span>
  test
  <br />
  test
  <br />
</span>
`;
